# 421-Solver

./: 421.cpp  CMakeLists.txt  LICENSE  README.md  main.cpp
results/: 111.md  211.md  221.md  222.md  311.md  321.md  322.md  331.md  332.md  333.md  411.md  421.md  422.md  431.md  432.md  433.md  441.md  442.md  443.md  444.md  511.md  521.md  522.md  531.md  532.md  533.md  541.md  542.md  543.md  544.md  551.md  552.md  553.md  554.md  555.md  611.md  621.md  622.md  631.md  632.md  (+16 more)
